[package]
name = "ethrex-prover"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
hex.workspace = true

# ethrex
ethrex-core.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true

# l2
ethrex-l2.workspace = true

# risc0
zkvm_interface = { path = "./zkvm/interface", default-features = false }
risc0-zkvm = { version = "1.1.2" }

# revm (this dep is temporary, should be replaced with ethrex-vm after ExecutionDB is completely integrated into the L1)
revm = { version = "14.0.3", features = [
  "std",
  "serde",
  "kzg-rs",
], default-features = false }

[dev-dependencies]
ethrex-vm.workspace = true
ethrex-storage.workspace = true
ethrex-blockchain.workspace = true

[lib]
name = "ethrex_prover_lib"
path = "src/lib.rs"

[[bin]]
name = "ethrex_prover"
path = "src/main.rs"

[features]
default = []
build_zkvm = ["zkvm_interface/build_zkvm"]
gpu = ["risc0-zkvm/cuda"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
