[package]
name = "ethereum_rust-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
ethereum_rust-l2.workspace = true
ethereum_rust-core.workspace = true
ethereum_rust-rpc.workspace = true

ethereum-types.workspace = true
tokio.workspace = true
hex.workspace = true
keccak-hash = "0.11.0"
secp256k1.workspace = true
itertools = "0.13.0"

[lib]
name = "ethereum_rust_l2_sdk"
path = "src/sdk.rs"
