[package]
name = "ethrex-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-l2.workspace = true
ethrex-core.workspace = true
ethrex-rpc.workspace = true

ethereum-types.workspace = true
tokio.workspace = true
hex.workspace = true
keccak-hash = "0.11.0"
secp256k1.workspace = true
itertools = "0.13.0"

[lib]
name = "ethrex_l2_sdk"
path = "src/sdk.rs"
