[package]
name = "ethrex-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-core.workspace = true
ethrex-rlp.workspace = true
ethrex-storage.workspace = true

tracing.workspace = true
tokio.workspace = true
bytes.workspace = true
hex.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
snap.workspace = true

k256 = { version = "0.13.3", features = ["ecdh"] }
sha3 = "0.10.8"

serde_json = "1.0.117"

# RLPx
concat-kdf = "0.1.0"
hmac = "0.12.1"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.8.5"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "./net.rs"
