[package]
name = "ethrex-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ethrex-core.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-blockchain.workspace = true
ethrex-net.workspace = true
ethrex-rlp.workspace = true
hex.workspace = true
axum-extra = { version = "0.9.3", features = ["typed-header"] }
jsonwebtoken.workspace = true
rand.workspace = true
tokio-util.workspace = true
reqwest.workspace = true

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "./rpc.rs"
